src/test/deca/syntax/invalid/resultats/test35_class_decl-synt.res
./src/test/deca/syntax/invalid/test35_class_decl.deca:17:0: missing '}' at 'class'
